# Veloce

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/veloce-app/: Cargo.toml
crates/veloce-app/assets/fonts/: SOURCES.md
crates/veloce-app/src/: app.rs  cdn.rs  embedded_emoji.rs  emoji.rs  fonts.rs  grouping.rs  imgcache.rs  main.rs  markdown.rs  net.rs  timestamp.rs
crates/veloce-app/src/plugins/: loud.rs  message_counter.rs  mod.rs  text_replace.rs
crates/veloce-discord/: Cargo.toml
crates/veloce-discord/src/: channel_tree.rs  commands.rs  error.rs  events.rs  gateway.rs  gateway_state.rs  identity.rs  lib.rs  models.rs  perms.rs  rest.rs
docs/superpowers/plans/: 2026-06-28-font-coverage.md  2026-06-28-guild-subscriptions.md  2026-06-28-plugin-system.md  2026-06-28-veloce-foundation.md  2026-06-29-color-emoji.md  2026-06-29-faithful-channels.md  2026-06-29-rich-messages-phase1.md
docs/superpowers/specs/: 2026-06-28-font-coverage-design.md  2026-06-28-guild-subscriptions-design.md  2026-06-28-plugin-system-design.md  2026-06-28-veloce-foundation-design.md  2026-06-29-color-emoji-design.md  2026-06-29-faithful-channels-design.md  2026-06-29-rich-message-rendering-design.md
tests/fixtures/: channel.json  guild.json  message_create.json  message_rich.json
