[workspace]
resolver = "2"
members = ["crates/veloce-discord", "crates/veloce-app"]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "GPL-3.0"
repository = "https://github.com/<user>/Veloce"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
