[package]
name = "veloce-app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "veloce"
path = "src/main.rs"

[dependencies]
veloce-discord = { path = "../veloce-discord" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
eframe = "0.30"
egui = "0.30"
keyring = "3"
anyhow = "1"
tracing-subscriber = "0.3"
