[package]
name = "veloce-app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "veloce"
path = "src/main.rs"

[dependencies]
veloce-discord = { path = "../veloce-discord" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
eframe = "0.30"
egui = "0.30"
egui_extras = { version = "0.30", features = ["all_loaders"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }
unicode-segmentation = "1"
unic-emoji-char = "0.9"
keyring = "3"
anyhow = "1"
tracing-subscriber = "0.3"
directories = "5"
